manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
  namespace: test
spec:
  type: LoadBalancer
  selector:
    app: test
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
