manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: online-store 
    kubernetes.azure.com/generator: devhub
  annotations:
    kubernetes.azure.com/tls-cert-keyvault-managed: "true"
    kubernetes.azure.com/tls-cert-keyvault-uri: "https://asabbour-kv.vault.azure.net/certificates/wild-demo-aks-contosonative-io"
spec:
  ingressClassName: nginx-external.kubernetes.azure.com
  rules:
    - host: frontend.demo.aks.contosonative.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
